RESOLVED FIXED44775
[EFL] Fix error message when theme loading fails
https://bugs.webkit.org/show_bug.cgi?id=44775
Summary [EFL] Fix error message when theme loading fails
Lucas De Marchi
Reported 2010-08-27 09:48:33 PDT
[EFL] Fix error message when theme loading fails
Attachments
Patch (1.40 KB, patch)
2010-08-27 09:51 PDT, Lucas De Marchi
no flags
Lucas De Marchi
Comment 1 2010-08-27 09:51:04 PDT
WebKit Commit Bot
Comment 2 2010-08-28 00:26:50 PDT
Comment on attachment 65725 [details] Patch Clearing flags on attachment: 65725 Committed r66300: <http://trac.webkit.org/changeset/66300>
WebKit Commit Bot
Comment 3 2010-08-28 00:26:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.