2010-08-28  Lucas De Marchi  <lucas.demarchi@profusion.mobi>

Reviewed by Kenneth Rohde Christiansen.

        [EFL] Fix error message when theme loading fails
        https://bugs.webkit.org/show_bug.cgi?id=44775

        Parameters for logging were in the wrong order.

        No new functionality so no new tests.

        * platform/efl/ScrollbarEfl.cpp:
        (ScrollbarEfl::setParent): exchange argument order in log function
        call

Canonical link: https://commits.webkit.org/57067@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66300 268f45cc-cd09-0410-ab3c-d52691b4dbfc