WebCore/platform/efl/ScrollbarEfl.cpp
@@ -125,7 +125,7 @@ void ScrollbarEfl::setParent(ScrollView* view)
         int err = edje_object_load_error_get(o);
         const char* errmsg = edje_load_error_str(err);
         EINA_LOG_ERR("Could not load theme '%s' from file '%s': #%d '%s'",
-                     theme.utf8().data(), group, err, errmsg);
+                     group, theme.utf8().data(), err, errmsg);
         return;
     }
 
